src/org/gamemonkey/jcc/parser/GameMonkey.jjt

options {
  JAVA_UNICODE_ESCAPE = true;
  ERROR_REPORTING = true;
  STATIC = false;
  JDK_VERSION = "1.5";
}


PARSER_BEGIN(GameMonkeyParser)

package org.gamemonkey.jcc.parser;

import java.io.*;
import java.util.*;

/**
 * Grammar to parse Game Monkey version 1.5
 */
public class GameMonkeyParser
{

   public List<ParseException> syntaxErrors = new ArrayList<ParseException> ();

   void recover (ParseException ex, int recoveryPoint) {
      syntaxErrors.add (ex);
      Token t;
      do {
          t = getNextToken ();
      } while (t.kind != recoveryPoint);
   }

   /**
    * Class to hold modifiers.
    */
   static public final class ModifierSet
   {
     /* Definitions of the bits in the modifiers field.  */
     public static final int GLOBAL = 1;
     public static final int LOCAL = 2;
     public static final int MEMBER = 4;

     /** A set of accessors that indicate whether the specified modifier
         is in the set. */

     public boolean isGlobal(int modifiers)
     {
       return (modifiers & GLOBAL) != 0;
     }

     public boolean isLocal(int modifiers)
     {
       return (modifiers & LOCAL) != 0;
     }

     public boolean isMember(int modifiers)
     {
       return (modifiers & MEMBER) != 0;
     }

     /**
      * Removes the given modifier.
      */
     static int removeModifier(int modifiers, int mod)
     {
        return modifiers & ~mod;
     }
   }

   public GameMonkeyParser(String fileName)
   {
      this(System.in);
      try { ReInit(new FileInputStream(new File(fileName))); }
      catch(Exception e) { e.printStackTrace(); }
   }

  public static void main(String args[]) {
    GameMonkeyParser parser;
    if (args.length == 0) {
      System.out.println("Game Monkey Parser:  Reading from standard input . . .");
      parser = new GameMonkeyParser(System.in);
    } else if (args.length == 1) {
      System.out.println("GameMonkey Parser:  Reading from file " + args[0] + " . . .");
      try {
        parser = new GameMonkeyParser(new java.io.FileInputStream(args[0]));
      } catch (java.io.FileNotFoundException e) {
        System.out.println("GameMonkey Parser:  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("GameMonkey Parser:  Usage is one of:");
      System.out.println("         java GameMonkeyParser < inputfile");
      System.out.println("OR");
      System.out.println("         java GameMonkeyParser inputfile");
      return;
    }
    try {
      parser.CompilationUnit();
      System.out.println("GameMonkey Parser:  GameMonkey program parsed successfully.");
    } catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("GameMonkey Parser:  Encountered errors during parse.");
    }
  }

}

PARSER_END(GameMonkeyParser)

/* WHITE SPACE */

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

/* COMMENTS */

MORE :
{
  <"/**" ~["/"]> { input_stream.backup(1); } : IN_FORMAL_COMMENT
|
  "/*" : IN_MULTI_LINE_COMMENT
}

SPECIAL_TOKEN :
{
  <SINGLE_LINE_COMMENT: "//" (~["\n", "\r"])* ("\n" | "\r" | "\r\n")?>
}

<IN_FORMAL_COMMENT>
SPECIAL_TOKEN :
{
  <FORMAL_COMMENT: "*/" > : DEFAULT
}

<IN_MULTI_LINE_COMMENT>
SPECIAL_TOKEN :
{
  <MULTI_LINE_COMMENT: "*/" > : DEFAULT
}

<IN_FORMAL_COMMENT,IN_MULTI_LINE_COMMENT>
MORE :
{
  < ~[] >
}

/* RESERVED WORDS AND LITERALS */

TOKEN :
{
  < GLOBAL: "global" >
| < LOCAL: "Local" >
| < MEMBER: "member" >
| < FUNCTION: "function" >
| < THIS: "this" >
| < DOSTRING: "dostring" >
| < TABLE: "table" >
| < IF: "if" >
| < ELSE: "else" >
| < FOR: "for" >
| < FOREACH: "foreach" >
| < WHILE: "while" >
| < DOWHILE: "dowhile" >
| < BREAK: "break" >
| < CONTINUE: "continue" >
| < RETURN: "return" >
| < TRUE: "true" >
| < FALSE: "false" >
| < NULL: "null" >
| < PRINT: "print" >
| < THREAD: "thread" >
| < YIELD: "yield" >
}

/* LITERALS */

TOKEN :
{
  < INTEGER_LITERAL:
        <DECIMAL_LITERAL> (["l","L"])?
      | <HEX_LITERAL> (["l","L"])?
      | <OCTAL_LITERAL> (["l","L"])?
  >
|
  < #DECIMAL_LITERAL: ["1"-"9"] (["0"-"9"])* >
|
  < #HEX_LITERAL: "0" ["x","X"] (["0"-"9","a"-"f","A"-"F"])+ >
|
  < #OCTAL_LITERAL: "0" (["0"-"7"])* >
|
  < FLOATING_POINT_LITERAL:
        <DECIMAL_FLOATING_POINT_LITERAL>
      | <HEXADECIMAL_FLOATING_POINT_LITERAL>
  >
|
  < #DECIMAL_FLOATING_POINT_LITERAL:
        (["0"-"9"])+ "." (["0"-"9"])* (<DECIMAL_EXPONENT>)? (["f","F","d","D"])?
      | "." (["0"-"9"])+ (<DECIMAL_EXPONENT>)? (["f","F","d","D"])?
      | (["0"-"9"])+ <DECIMAL_EXPONENT> (["f","F","d","D"])?
      | (["0"-"9"])+ (<DECIMAL_EXPONENT>)? ["f","F","d","D"]
  >
|
  < #DECIMAL_EXPONENT: ["e","E"] (["+","-"])? (["0"-"9"])+ >
|
  < #HEXADECIMAL_FLOATING_POINT_LITERAL:
        "0" ["x", "X"] (["0"-"9","a"-"f","A"-"F"])+ (".")? <HEXADECIMAL_EXPONENT> (["f","F","d","D"])?
      | "0" ["x", "X"] (["0"-"9","a"-"f","A"-"F"])* "." (["0"-"9","a"-"f","A"-"F"])+ <HEXADECIMAL_EXPONENT> (["f","F","d","D"])?
  >
|
  < #HEXADECIMAL_EXPONENT: ["p","P"] (["+","-"])? (["0"-"9"])+ >
|
  < CHARACTER_LITERAL:
      "'"
      (   (~["'","\\","\n","\r"])
        | ("\\"
            ( ["n","t","b","r","f","\\","'","\""]
            | ["0"-"7"] ( ["0"-"7"] )?
            | ["0"-"3"] ["0"-"7"] ["0"-"7"]
            )
          )
      )
      "'"
  >
|
  < STRING_LITERAL:
      "\""
      (   (~["\"","\\","\n","\r"])
        | ("\\"
            ( ["n","t","b","r","f","\\","'","\""]
            | ["0"-"7"] ( ["0"-"7"] )?
            | ["0"-"3"] ["0"-"7"] ["0"-"7"]
            )
          )
      )*
      "\""
  >
}

/* IDENTIFIERS */

TOKEN :
{
  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>|<OTHER>)* >
|
  < #LETTER:
      [
       "A"-"Z",
       "a"-"z"
      ]
  >
|
  < #DIGIT:
      [
        "0"-"9"
      ]
  >
|
  < #OTHER:
      [
        "_"
      ]
  >
}

/* SEPARATORS */

TOKEN :
{
  < LPAREN: "(" >
| < RPAREN: ")" >
| < LBRACE: "{" >
| < RBRACE: "}" >
| < LBRACKET: "[" >
| < RBRACKET: "]" >
| < SEMICOLON: ";" >
| < COMMA: "," >
| < DOT: "." >
| < AT: "@" >
}

/* OPERATORS */

TOKEN :
{
  < ASSIGN: "=" >
| < LT: "<" >
| < BANG: "!" >
| < TILDE: "~" >
| < HOOK: "?" >
| < COLON: ":" >
| < EQ: "==" >
| < LE: "<=" >
| < GE: ">=" >
| < NE: "!=" >
| < SC_OR: "||" >
| < SC_AND: "&&" >
| < INCR: "++" >
| < DECR: "--" >
| < PLUS: "+" >
| < MINUS: "-" >
| < STAR: "*" >
| < SLASH: "/" >
| < BIT_AND: "&" >
| < BIT_OR: "|" >
| < XOR: "^" >
| < REM: "%" >
| < LSHIFT: "<<" >
| < PLUSASSIGN: "+=" >
| < MINUSASSIGN: "-=" >
| < STARASSIGN: "*=" >
| < SLASHASSIGN: "/=" >
| < ANDASSIGN: "&=" >
| < ORASSIGN: "|=" >
| < XORASSIGN: "^=" >
| < REMASSIGN: "%=" >
| < LSHIFTASSIGN: "<<=" >
| < RSIGNEDSHIFTASSIGN: ">>=" >
| < RUNSIGNEDSHIFTASSIGN: ">>>=" >
| < ELLIPSIS: "..." >
}

/* >'s need special attention due to generics syntax. */
TOKEN :
{
  < RUNSIGNEDSHIFT: ">>>" >
  {
     matchedToken.kind = GT;
     ((Token)matchedToken).kind = RUNSIGNEDSHIFT;
     input_stream.backup(2);
     matchedToken.image = ">";
  }
| < RSIGNEDSHIFT: ">>" >
  {
     matchedToken.kind = GT;
     ((Token)matchedToken).kind = RSIGNEDSHIFT;
     input_stream.backup(1);
     matchedToken.image = ">";
  }
| < GT: ">" >
}



/*****************************************
 * THE GameMonkey LANGUAGE GRAMMAR STARTS HERE *
 *****************************************/



/*
 * Program structuring syntax follows.
 */

void CompilationUnit():
{}
{
try {
    (Expression())*
  <EOF>
} catch (ParseException ex) {
        recover (ex, SEMICOLON);
    }
}

void Expression():
{}
{
    Block()
    |
    (
        LOOKAHEAD(2)
        Assignment() <SEMICOLON>
        | Command() <SEMICOLON>
    )
}

void Variable():
{}
{
    <IDENTIFIER> (<DOT> <IDENTIFIER>)?
}

void Command():
{}
{
    Variable() "(" ValidAssignments() ")"
}

void Assignment():
{}
{
    (Scope())? ScopelessAssignment()
    
}

void FunctionDefinition():
{}
{
    <FUNCTION> "(" ( Variable() ( <COMMA> Variable() )* )* ")" Block()
}

void Block():
{}
{
    "{" ( Expression() )* "}"
}

void ScopelessAssignment():
{}
{
    <IDENTIFIER> AssignOperator() ValidAssignments()
}

void ValidAssignments():
{}
{
    //foo() + bar() + (foo() + "hi" + 2 + 5.4 + function(){} + {"hi"}, "hmm")
    ValidAssignment()
    | "(" ( ValidAssignments() )? ")"

}

void ValidAssignment():
{}
{
    Literal()
    | "{" DefiningArgs() "}"
    | FunctionDefinition()
    | 
    (
        LOOKAHEAD(4)
        Command()
        | Variable()
    )
}

void DefiningArgs():
{}
{
    //() or (foo=1, bar=2) or (foo={blah={...}})
    ( Assignment() ( "," (Assignment())? )* )?
}


void Scope():
{}
{
 ( <GLOBAL> | <LOCAL> | <MEMBER> )
}

void AssignOperator():
{}
{
    ( "=" )
}


void Literal():
{}
{
    (
        <STRING_LITERAL>
        | <FLOATING_POINT_LITERAL>
        | <CHARACTER_LITERAL>
        | <INTEGER_LITERAL>
    )
}


